fixed a mobile screen image problem

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Vijay - Personal Portfolio</title>
   <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Brian</title>
+<title>Vijay - Personal Portfolio</title>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
@@ -99,7 +99,7 @@ For best view switch to full view.
                 <div class="hero-content">
                     <img src="img/Hero.jpg">
                     <h1>Hi! I'm Vijay</h1>
-                    <h2 id="hero-text-animation">Web Developer/GreyHat Hacker<br><strong>Mechanical Engineer</strong></h2>
+                    <h2 id="hero-text-animation">Web_Developer Grey_HatHacker Mechanical_Engineer</h2>
                     <button class="download"><a download href="downloads/example.txt">Download CV</a></button>
                     <!--To add your file simply replace example.txt with whatever file you want-->
                 </div>
