edited html hero image

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ For best view switch to full view.
                 <div class="hero-content">
                     <img src="img/Hero.jpg">
                     <h1>Hi! I'm Vijay</h1>
-                    <h2 id="hero-text-animation">Web_Developer Grey_HatHacker Mechanical_Engineer</h2>
+                    <h2 id="hero-text-animation">Web_Developer GreyHat_Hacker Mechanical_Engineer</h2>
                     <button class="download"><a download href="downloads/example.txt">Download CV</a></button>
                     <!--To add your file simply replace example.txt with whatever file you want-->
                 </div>
@@ -260,8 +260,8 @@ For best view switch to full view.
 
         <div class="img-grid">
             <div class="img-container graph" data-category="graph">
-                <img src="http://www.bricho.com/demo/brian/with-particles/img/portfolio-img.jpeg">
-                <div class="img-overlay popup-gallery" href="http://www.bricho.com/demo/brian/with-particles/img/portfolio-img.jpeg">
+                <img src="img/Project.jpeg">
+                <div class="img-overlay popup-gallery" href="img/Project.jpeg">
                     <div class="img-overlay-text">
                         <p>Category</p>
                         <h3>Project Title</h3>
@@ -270,8 +270,8 @@ For best view switch to full view.
             </div>
 
             <div class="img-container brand" data-category="brand">
-                <img src="http://www.bricho.com/demo/brian/with-particles/img/portfolio-img.jpeg">
-                <div class="img-overlay popup-gallery" href="http://www.bricho.com/demo/brian/with-particles/img/portfolio-img.jpeg">
+                <img src="img/Project.jpeg">
+                <div class="img-overlay popup-gallery" href="img/Project.jpeg">
                     <div class="img-overlay-text">
                         <p>Category</p>
                         <h3>Project Title</h3>
@@ -280,8 +280,8 @@ For best view switch to full view.
             </div>
 
             <div class="img-container design" data-category="design">
-                <img src="http://www.bricho.com/demo/brian/with-particles/img/portfolio-img.jpeg">
-                <div class="img-overlay popup-gallery" href="http://www.bricho.com/demo/brian/with-particles/img/portfolio-img.jpeg">
+                <img src="img/Project.jpeg">
+                <div class="img-overlay popup-gallery" href="img/Project.jpeg">
                     <div class="img-overlay-text">
                         <p>Category</p>
                         <h3>Project Title</h3>
@@ -290,8 +290,8 @@ For best view switch to full view.
             </div>
 
             <div class="img-container design" data-category="design">
-                <img src="http://www.bricho.com/demo/brian/with-particles/img/portfolio-img.jpeg">
-                <div class="img-overlay popup-gallery" href="http://www.bricho.com/demo/brian/with-particles/img/portfolio-img.jpeg">
+                <img src="img/Project.jpeg">
+                <div class="img-overlay popup-gallery" href="img/Project.jpeg">
                     <div class="img-overlay-text">
                         <p>Category</p>
                         <h3>Project Title</h3>
@@ -300,8 +300,8 @@ For best view switch to full view.
             </div>
 
             <div class="img-container design" data-category="design">
-                <img src="http://www.bricho.com/demo/brian/with-particles/img/portfolio-img.jpeg">
-                <div class="img-overlay popup-gallery" href="http://www.bricho.com/demo/brian/with-particles/img/portfolio-img.jpeg">
+                <img src="img/Project.jpeg">
+                <div class="img-overlay popup-gallery" href="img/Project.jpeg">
                     <div class="img-overlay-text">
                         <p>Category</p>
                         <h3>Project Title</h3>
@@ -310,8 +310,8 @@ For best view switch to full view.
             </div>
 
             <div class="img-container graph" data-category="graph">
-                <img src="http://www.bricho.com/demo/brian/with-particles/img/portfolio-img.jpeg">
-                <div class="img-overlay popup-gallery" href="http://www.bricho.com/demo/brian/with-particles/img/portfolio-img.jpeg">
+                <img src="img/Project.jpeg">
+                <div class="img-overlay popup-gallery" href="img/Project.jpeg">
                     <div class="img-overlay-text">
                         <p>Category</p>
                         <h3>Project Title</h3>
@@ -442,15 +442,11 @@ For best view switch to full view.
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
 <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-<script src="js/particles.js"></script>
-<script src="js/owl.carousel.min.js"></script>
-<script src="js/jquery.magnific-popup.js"></script>
-<script src="js/scrollmagic/minified/ScrollMagic.min.js"></script>
-<script src="js/scrollmagic/uncompressed/plugins/debug.addIndicators.js"></script>
+
 <script src="js/main.js"></script>
- <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
+
 <script src='https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js'></script>
-<script src='https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js'></script>
+
 <script src='https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.2/ScrollMagic.min.js'></script>
